Updated text with revisions, partially

--- a/references.bib
+++ b/references.bib
@@ -141,7 +141,8 @@
 }
 
 @misc{iotmarket,
-  title={GrowthEnabler, Market Pulse Report, Internet of Things},
+  title={Market Pulse Report, Internet of Things},
+  author={GrowthEnabler},
   url = {https://growthenabler.com/flipbook/pdf/IOT%20Report.pdf},
   note = {Accessed: 05-03-2018},
   year={2017}
