--- a/resumo.tex
+++ b/resumo.tex
@@ -1,3 +1,1 @@
-Um programa computa em dados sensíveis e não sensíveis, esses dados seguem um fluxo específico indo de \textit{data sources} para \textit{data sinks}. O vazamento de dados acontece quando dados sensíveis chegam sem autorização em \textit{sinks}, para prevenir isso,  técnicas estáticas e dinâmicas de \textit{Flow Enforcement} garantem que esses dados não cheguem nessas \textit{sinks}. Para isso, esses métodos usam listas, geradas manualmente, de métodos que sejam \textit{sources} sensíveis ou \textit{sinks}, e essa solução é impraticável para grandes APIs como a do Android. Visto isso, uma abordagem usando \textit{machine learning} foi desenvolvida para classificar esses métodos \textit{sources} e \textit{sinks}. \\
-
-O presente trabalho tem como objetivo criar um dataset para avaliar os métodos de classificação Monolítios e Sistemas Multiclassificadores para decidir qual é o mais apropriado para esse problema. Para criar o dataset, foram utilizados as APIs Android Level 3 a Level 27, excluindo as de Level 18 e 20, abrangendo a maioria das APIs recentes que foram aplicadas em um extrator de features. Para realizar a classificação, foram amostrados aleatoriamente 30 datasets de treino e teste, foram avaliados precisão, recall, F1 score e acurácia dos classificadores em cada um dos datasets e feito um teste de hipótese. Neste trabalho concluimos que o MLP tem melhores resultados no problema de classificação de métodos Android, METADES com árvore de decisão e SVM também tem um resultado satisfatório e ficam estatisticamente empatados com o MLP.
+Um programa computa em dados sensíveis e não sensíveis, sendo sensível, qualquer dado que possa identificar um usuário, como GPS, fotos e videos. Esses dados seguem um fluxo específico indo de \textit{data sources} para \textit{data sinks}, \textit{data sources} são métodos ou funções que geram dados sensíveis, \textit{data sinks} são funções que consomem qualquer tipo de dados, sensível ou não. O vazamento de dados acontece quando dados sensíveis chegam sem autorização em \textit{sinks}, para prevenir isso, técnicas de \textit{Flow Enforcement} que garantem que dados sensíveis não cheguem em \textit{sinks} não autorizados. Para isso, esses métodos usam listas, geradas manualmente, de métodos que sejam \textit{sources} sensíveis ou \textit{sinks}, e essa solução é impraticável para grandes APIs como a do Android. Visto isso, uma abordagem usando \textit{machine learning} foi desenvolvida para classificar esses métodos \textit{sources} e \textit{sinks}. O presente trabalho tem como objetivo criar um dataset para avaliar os métodos de classificação para decidir qual é o mais apropriado para esse problema. Para criar o dataset, foram utilizados as APIs Android Level 3 a Level 27, excluindo as de Level 18 e 20, abrangendo a maioria das APIs recentes que foram aplicadas em um extrator de features. Para realizar a classificação, foram amostrados aleatoriamente 30 datasets de treino e teste e usadas as métricas, revocação, medida F1 e acurácia dos classificadores em cada um dos datasets e feito um teste de hipótese. Neste trabalho concluimos que o MLP tem melhores resultados no problema de classificação de métodos Android, META-DES com árvore de decisão e SVM também tiveram um resultado satisfatório e tem as resultados com médias próximas ao MLP.
