Added deeplearning basis

--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,40 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF-8
 
+@article{lecun2015deep,
+  title={Deep learning},
+  author={LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+  journal={nature},
+  volume={521},
+  number={7553},
+  pages={436},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+
+@inproceedings{szegedy2015going,
+  title={Going deeper with convolutions},
+  author={Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={1--9},
+  year={2015}
+}
+
+@article{yang2018deep,
+  title={Deep Neural Decision Trees},
+  author={Yang, Yongxin and Morillo, Irene Garcia and Hospedales, Timothy M},
+  journal={arXiv preprint arXiv:1806.06988},
+  year={2018}
+}
+
+@inproceedings{kontschieder2015deep,
+  title={Deep neural decision forests},
+  author={Kontschieder, Peter and Fiterau, Madalina and Criminisi, Antonio and Rota Bulo, Samuel},
+  booktitle={Proceedings of the IEEE international conference on computer vision},
+  pages={1467--1475},
+  year={2015}
+}
+
 @inproceedings{russo2010dynamic,
   title={Dynamic vs. static flow-sensitive security analysis},
   author={Russo, Alejandro and Sabelfeld, Andrei},
