Added classification basis

--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,13 @@
   publisher={Nature Publishing Group}
 }
 
+@book{kuncheva2004combining,
+  title={Combining pattern classifiers: methods and algorithms},
+  author={Kuncheva, Ludmila I},
+  year={2004},
+  publisher={John Wiley \& Sons}
+}
+
 @inproceedings{szegedy2015going,
   title={Going deeper with convolutions},
   author={Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
