--- a/abstract.tex
+++ b/abstract.tex
@@ -1,3 +1,1 @@
-A program computes in either sensitive and non-sensitive data and follows a specific flow, from data sources to data sinks. Data leakage happens when sensitive data is sent to unauthorized data sinks, to prevent that, Dynamic and Static Flow Enforcement  techniques ensure that sensitive data reaches those sinks. To prevent data leakage, these methods rely on a list of sensitive data sources and data sinks, this list is hand annotated and is practical to be made to a huge API such as Android. With that in mind, a machine learning model is used to classify methods into sources and sinks. The present work intends to extend the previous work creating a dataset to evaluate the most used classification algorithms and define which is the most suitable to this problem. \\
-
-This work has as objective create a dataset of Android methods to evaluate classifiers and decide which one is the most suited to this problem. To create the dataset, we used real Android APIs from Level 3 to Level 27, excluding Levels 18 and 20, embracing all newer APIs that have been used in a feature extractor. To decide which Monolithic or Multi Classifier Systems solves this classification problem, we random sampled 30 dataset into train and test, calculated precision, recall, F1 score and accuracy. We conclude that MLP has better results but METADES with Decision Tree and SVM have also satisfying results, they are statistically in the same baseline as MLP.
+A program computes in either sensitive and non-sensitive data and follows a specific flow, from data sources to data sinks, data sources are methods or functions that create sensitive data, data sinks are functions that consumes any kind of information, sensitive or not. Data leakage happens when sensitive data is sent to unauthorized data sinks, to prevent that, Dynamic and Static Flow Enforcement techniques ensure that sensitive data reaches those sinks. To prevent data leakage, these methods rely on a list of sensitive data sources and data sinks, this list is hand annotated and is practical to be made to a huge API such as Android. With that in mind, a machine learning model is used to classify methods into sources and sinks. The present work intends to extend the previous work creating a dataset to evaluate the most used classification algorithms and define which is the most suitable to this problem. This work has as objective create a dataset of Android methods to evaluate classifiers and decide which one is the most suited to this problem. To create the dataset, we used real Android APIs from Level 3 to Level 27, excluding Levels 18 and 20, embracing all newer APIs that have been used in a feature extractor. To decide which Monolithic or Multi Classifier Systems solves this classification problem, we random sampled 30 dataset into train and test, calculated precision, recall, F1 score and accuracy. We conclude that MLP has better results but META-DES with Decision Tree and SVM have also satisfying results, with averages close to MLP.
